<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="bottom"
    android:background="@color/orange"
    android:orientation="horizontal"
    android:padding="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/transparent_header_icon"
        android:src="@drawable/transparent_icon_small"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:shadowColor="#000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:text="@string/random_doggo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuz_we_lovin_dogs"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

</LinearLayout>