<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/search_imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="9"
        android:background="#000000"
        android:contentDescription="@string/randomdoggo_picture"
        android:padding="1dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_picture"
            android:textAllCaps="false"
            android:textSize="35sp"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            android:layout_margin="10dp">
        </Button>

        <Button
            android:id="@+id/add_to_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_to_favourites"
            android:textSize="25sp"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/SearchAddToFavourites"
            android:padding="20dp"
            android:layout_margin="10dp">
        </Button>

    </LinearLayout>


</LinearLayout>